Resolved Layout issue

--- a/src/flashCard-app/components/Form/Form.css
+++ b/src/flashCard-app/components/Form/Form.css
@@ -1,6 +1,6 @@
 .form_container {
   width: 40%;
-  height: 100vh;
+  min-height: 80vh;
   margin: 20px auto 10px;
 }
 
